fix: clicking folder icon sometimes turns invisible

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -58,6 +58,14 @@ ul.overflow::after {
   }
 }
 
+svg {
+  pointer-events: all;
+}
+
+svg > polyline {
+  pointer-events: none;
+}
+
 .folder-container {
   flex-direction: row;
   display: flex;
